Soporte de PDF: render a imagen y OCR contable

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,8 @@
                         <form action="/upload" method="post" enctype="multipart/form-data">
                             <div class="mb-3">
                                 <label class="form-label">Seleccionar imágenes</label>
-                                <input class="form-control" type="file" name="files" accept="image/*" multiple required>
+                                <input class="form-control" type="file" name="files" accept="image/*,application/pdf"
+                                    multiple required>
                                 <div class="form-text">
                                     Podés seleccionar varias fotos a la vez.
                                 </div>
